# 2509-Attention-Visualize

./: .gitignore  CLAUDE.md  README.md  app.py  attention_viz.html  main.py  pyproject.toml  test_basic_verification.py  web_app.py
.claude/: settings.local.json
.claude/commands/: task_zh.md
specs/attention-prediction-chain/: requirements.md  task-list.md  verify.md
specs/attention-visualizer/: design.md  requirements.md  tasks.md  verify.md
